2002-01-26  Kevin Vandersloot <kfv101@psu.edu>

	* procman.desktop.in: use newly changed procman.png

2002-01-21  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: add bt_BR to translated files

2002-01-19  Kevin Vandersloot <kfv101@psu.edu>

	* procman.spec: don't intall procman.png

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* procman.desktop.in:

	Rename "System Monitor" and change the icon.

2002-01-15  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.ini: Added Malay (ms)to ALL_LINGUAS.
	* po/ms.po: Added Malay Malay Translation.

2002-01-12  Kevin Vandersloot <kfv101@psu.edu>

	* procman.spec: Fix the spec file

2002-01-11  Kevin Vandersloot <kfv101@psu.edu>

	* procman.spec: Update thanks to Havoc Pennington
	<hp@redhat.com>

2002-01-08  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: release 1.1.2. Bump requirements

	* TODO: Pretty much complete :)

2001-12-27  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added portuguese to ALL_LINGUAS

2001-12-13  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: add gconf schema support

2001-12-11  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in: Added "sk" to ALL_LINGUAS.

Sat Dec  8 13:09:28 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Fix so $ACLOCAL_FLAGS is honoured
	when aclocal is run for --enable-maintainer-mode

2001-12-08  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in, Makefile.am: use intltool instead of xml-i18n-tools;
	define GETTEXT_PACKAGE
	* acconfig.h: add template for GETTEXT_PACKAGE
	* src/procan.c: get translated messages in UTF-8 codeset.
	* src/Makefile.am: (INCLUDES): remove intl
	(procman_LDADD): remove $(INTLLIBS)

2001-12-03  Jesus Bravo Alvarez  <jba@pobox.com>

	* configure.in: Added gl (Galician) to ALL_LINGUAS

2001-11-25  Kevn Vandersloot <kfv101@psu.edu>

	* configure.in: fix the check for gtk. That should
	be gtk+-2.0 not gtk-2.0

	* src/Makefile.am: remove LIBGTOP_LIBS and LIBGTOP_CFLAGS
