@@ -1,8 +1,9 @@
 [Desktop Entry]
 _Name=System Monitor
 _Comment=View current processes and monitor system state
-TryExec=procman
-Exec=procman
+TryExec=gnome-system-monitor
+Exec=gnome-system-monitor
 Icon=procman.png
 Terminal=0
 Type=Application
+Categories=Application;System;
