@@ -1,6 +1,6 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-procman.desktop.in
+gnome-system-monitor.desktop.in
 src/callbacks.c
 src/defaulttable.h
 src/favorites.c
