@@ -1,3 +1,9 @@
+2002-01-27  Seth Nickell  <snickell@stanford.edu>
+
+	reviewed by: <delete if not using a buddy>
+
+	* POTFILES.in:
+
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Converted to UTF-8.
