@@ -1,3 +1,15 @@
+2002-01-27  Seth Nickell  <snickell@stanford.edu>
+
+	* Makefile.am:
+	* gnome-system-monitor.desktop.in:
+	* gnome-system-monitor.spec:
+	* procman.desktop.in:
+	* procman.spec:
+
+	Renaming applications to match their menu entries.
+
+	System Monitor -> gnome-system-monitor.
+	
 2002-01-26  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procman.desktop.in: use newly changed procman.png
